Fiks etter bump av kontrakt